--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-<h1><a href="jobtest4/index.html">Get project here</a></h1>
+<h1><a href="JOBTEST4/index.html">Get project here</a></h1>
 </body>
 </html>
